<resources>
    <string name="app_name">KhiladiAdda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hi User</string>
    <string name="action_settings">Settings</string>
    <string name="text_msg">Message</string>
    <string name="ok">OK</string>
    <string name="verify">Verify Aadhar</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_email">Email Address</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="text_terms">Please check Term &amp; Conditions, Legality &amp; Legality &amp; Responsible Gaming!</string>
    <string name="txt_save">Save</string>
    <string name="txt_continue">Continue</string>
    <string name="text_send_otp">Send OTP</string>
    <string name="text_confirm_otp">Confirm OTP</string>
    <string name="help_otp">You have received OTP from KhiladiAdda on your registered mobile number.\nPlease enter OTP here to withdraw amount.</string>
    <string name="title_otp_authentication">OTP Authentication</string>
    <string name="txt_resend_otp"><u>Resend OTP</u></string>
    <string name="hint_user_name">Username</string>
    <string name="hint_country">Country</string>
    <string name="text_update">Update</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="title_home">Home</string>
    <string name="hint_invite_code_optional">Invite Code (Optional)</string>
    <string name="server_client_id">878751439202-urccqmf4mvn74g4d3u85ceqbok7ktr1k.apps.googleusercontent.com</string>
    <string name="facebook_application_id">1927552034015229</string>
    <string name="fb_login_protocol_scheme">fb1927552034015229</string>
    <string name="txt_read_sms_permission">Please allow KhiladiAdda to auto detect OTP.</string>
    <string name="text_splash_play">Play Hard, Win Big</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_next">Next</string>
    <string name="txt_enter_otp">Enter the 6 digit code sent to</string>
    <string name="txt_progress_authentication">Please wait...</string>
    <string name="error_internet">Please check your internet connection or try again later!</string>
    <string name="text_trending">Trending</string>
    <string name="text_top_stories">Top Stories</string>
    <string name="text__leagues">Leagues</string>
    <string name="text_more">More</string>
    <string name="text_categories">Categories</string>
    <string name="text_trending_quizzes">Trending Quizzes</string>
    <string name="text_picture">Picture</string>
    <string name="text_gaming">Gaming</string>
    <string name="text_web_series">Web Series</string>
    <string name="text_logo">Logo</string>
    <string name="text_sports">Sports</string>
    <string name="text_technology">Technology</string>
    <string name="text_science">Science</string>
    <string name="text__past">Past</string>
    <string name="text__live">Live</string>
    <string name="text__upcoming">Upcoming</string>
    <string name="text_multiple_attempt">Max 3 Attempts</string>
    <string name="help_drawable_kill_point">Kill Point \n 10Coins/Kill</string>
    <string name="text_prize">Prizes</string>
    <string name="text_entry">Entry</string>
    <string name="text_ends_in">Ends In</string>
    <string name="text_total_participant">Total Participants</string>
    <string name="text_play">Play</string>
    <string name="text_rules">Rules</string>
    <string name="text_prize_pool_breakup">Prize Pool Breakup</string>
    <string name="text_registration_open">Registration\nOpen</string>
    <string name="text_question_ex">Q.25</string>
    <string name="text_replay">Replay</string>
    <string name="text_leaderboard">Leaderboard</string>
    <string name="txt_choose_quiz">Choose a Quiz</string>
    <string name="text_no_quiz_list">Hey, we are starting your quiz shortly!</string>
    <string name="text_invite">Refer friends and\nEarn 5 coins\nfor each referral</string>
    <string name="text_invite_code">Your invite code is</string>
    <string name="text_invite_whatsapp">INVITE VIA WHATSAPP</string>
    <string name="text_sharing_option">MORE SHARING OPTIONS</string>
    <string name="text_referred_friends">Total Friends Joined</string>
    <string name="text_view">View</string>
    <string name="text_earning_through_friends">Earned through\nFriends</string>
    <string name="text_friends_joined">Total Friends\nJoined</string>
    <string name="text_progress_time">Timer</string>
    <string name="txt_submit">Submit</string>
    <string name="format_quiz_timer">00:%1$02d</string>
    <string name="format_quiz_question_number">Q %1$d of %2$d</string>
    <string name="txt_not_correct">Not Correct</string>
    <string name="txt_correct">Correct</string>
    <string name="text_played_max_limit">You have reached a maximum limit of playing a quiz</string>
    <string name="text_joined">Joined</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="my_stats">My Stats &amp; Voucher</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_rewards_offer">My Rewards &amp; Offers</string>
    <string name="my_referals">My Referrals</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_ludo">Ludo</string>
    <string name="menu_setting">Settings</string>
    <string name="responsible_gaming">Responsible Gaming</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="text_recent_transaction">Recent Transactions</string>
    <string name="text_total_coins">Total Coins</string>
    <string name="text_bonus">Bonus</string>
    <string name="text_wining">Winnings</string>
    <string name="text_deposited">Deposited</string>
    <string name="text_withdraw">Withdraw</string>
    <string name="text_wining_cash">Wining Cash : Rs. 0</string>
    <string name="text_cash_withdraw_options">Cash Withdraw Options</string>
    <string name="text_enter_amount">Enter Amount</string>
    <string name="text_my_coupons">My Coupons</string>
    <string name="text_get_coupons">Get Coupons</string>
    <string name="action_notifications">Notification</string>
    <string name="text_standing">Standing</string>
    <string name="text_cash_prize">Prize (Coins)</string>
    <string name="txt_dob">Date of Birth</string>
    <string name="text_invitation_code">Invitation Code</string>
    <string name="my_add_money">Add Money</string>
    <string name="my_withdraw_wallet">Withdraw</string>
    <string name="wallet_transaction">Wallet Transactions</string>
    <string name="text_invite_friends">Invite Friends</string>
    <string name="text_logout">Logout</string>
    <string name="cancel">No</string>
    <string name="txt_alert_logout">Are you sure want to logout?</string>
    <string name="text_otp_send_successfully">OTP is send to your mobile number</string>
    <string name="text_change_pan">Update PAN</string>
    <string name="txt_pan">PAN</string>
    <string name="text_change_dob">Change DOB</string>
    <string name="text_change_pwd">Change Password</string>
    <string name="text_add_challenge">Add Challenge</string>
    <string name="hint_state">State</string>
    <string name="text_upload">Upload</string>
    <string name="txt_profile_update">Profile Update</string>
    <string name="my_facts">My Facts</string>
    <string name="liked_fact">Liked Facts</string>
    <string name="bookmark_fact">Bookmarked Fact</string>
    <string name="text_pan_number">PAN Number (As printed on PAN card)</string>
    <string name="txt_allow_permission">Please allow permission.</string>
    <string name="text_math">Maths</string>
    <string name="text_gk">General Knowledge</string>
    <string name="text_movie">Movies</string>
    <string name="text_term_condition">Terms and Conditions</string>
    <string name="text_legality">Legality</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_cancellation_policy">Cancellation Policy</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="text_about_us">About Us</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="text_amount_rs">enter amount in rupees</string>
    <string name="text_payment_status">Payment Status</string>
    <string name="text_payment_status_msg">Congrats, Your payment is successful. 100 coin has been added to your wallet.</string>
    <string name="text_game_credential">Game Details</string>
    <string name="hint_character_name">Characted Id</string>
    <string name="text_fifty">50</string>
    <string name="hint_game_user_name">Game Username</string>
    <string name="hint_team_id">Team Id</string>
    <string name="txt_pay">Pay</string>
    <string name="text_tppmode">Mode\nTPP</string>
    <string name="text_squad_payment">*This amount will be used to create your a team and your team mate doesn\'t have to pay. You can ask team mate to transfer the amount to your wallet using transfer coin option in Wallet.*\n 1. Only one member of your team can create a team.\n 2. After creating a team you will be get a Slot and TeamId. Share TeamId with your team mates.\n 3. Your other team mates will join the team using TeamId on clicking Join Team. \n 4. You can see your created team details i.e Slot,TeamId &amp; Team mates using option MyLeague->Upcoming->ViewMyTeam.</string>
    <string name="help_pubg_credential">* Please enter your BattleGround India username in username field and BattleGround India game characterId in characterId field.\n Any wrong entry will not able to provide you winning amount.</string>
    <string name="hint_pubg_user_name">BattleGround India Username</string>
    <string name="hint_pubg_character_name">BattleGround India CharacterId</string>
    <string name="hint_team_name_any">Team Name(You can choose any name)</string>
    <string name="help_game_rules_join_team">1. You can only join a team if any of your team mates has created team and shared TeamId. \n 2. If your team mates has not created any team than you can create a team using Create Team. \n 3. Please enter the TeamId correctly which is shared by your team mate. \n 4. You don\'t have to pay any entry fee as your team leader has already paid entry fee during creating team. \n 5. Please be in your slot which is provided for your team otherwise you will be kicked out from the match.</string>
    <string name="text_social_media">Social Media</string>
    <string name="text_telegram">Telegram</string>
    <string name="text_instagram">Instagram</string>
    <string name="text_youtube">YouTube</string>
    <string name="help_drawable_map">Map \n ERANGLE</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="help_pubg_show_image">How to get BattleGround India Username? Click to view!</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_hundred">100</string>
    <string name="text_ten">10</string>
    <string name="text_two_hundred">200</string>
    <string name="text_five_hundred">500</string>
    <string name="s3">s</string>
    <string name="my_past_quiz">My Played Quiz</string>
    <string name="my_stats_voucher">My Stats &amp; Voucher</string>
    <string name="text_thousand">1000</string>
    <string name="text_two_thousand">2000</string>
    <string name="text_five_thousand">5000</string>
    <string name="menu_deposit">Deposit Limit</string>
    <string name="hint_game_level">Game Level</string>
</resources>