<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_picture"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_picture"
            android:text="@string/text_picture" />

        <TextView
            android:id="@+id/tv_gaming"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_gaming"
            android:text="@string/text_gaming" />

        <TextView
            android:id="@+id/tv_web"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_video_player"
            android:text="@string/text_web_series" />

        <TextView
            android:id="@+id/tv_logo"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_camera"
            android:drawableTint="@color/like_pink"
            android:text="@string/text_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_math"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_plus"
            android:text="@string/text_math" />

        <TextView
            android:id="@+id/tv_movie"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_menu_slideshow"
            android:drawableTint="@color/like_pink"
            android:text="@string/text_movie" />

        <TextView
            android:id="@+id/tv_sports"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_trophy_2"
            android:text="@string/text_sports" />

        <TextView
            android:id="@+id/tv_technology"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_technology"
            android:text="@string/text_technology" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_gk"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_gk"
            android:text="@string/text_gk" />

        <TextView
            android:id="@+id/tv_science"
            style="@style/QuizIconText"
            android:drawableTop="@drawable/ic_science"
            android:text="@string/text_science" />

    </LinearLayout>

</LinearLayout>