<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".setting.SettingActivity">

  <include layout="@layout/actionbar_transparent"/>

  <include layout="@layout/bannermoengage" />

    <TextView
        android:id="@+id/tv_term_condition"
        style="@style/SettingText"
        android:layout_below="@+id/action_bar"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/text_term_condition" />

    <TextView
        android:id="@+id/tv_legality"
        style="@style/SettingText"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_below="@+id/tv_term_condition"
        android:text="@string/text_legality" />

    <TextView
        android:id="@+id/tv_privacy_policy"
        style="@style/SettingText"
        android:layout_below="@+id/tv_legality"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/text_privacy_policy" />

    <TextView
        android:id="@+id/tv_cancellation_policy"
        style="@style/SettingText"
        android:layout_below="@+id/tv_privacy_policy"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/text_cancellation_policy" />

    <TextView
        android:id="@+id/tv_contact_us"
        style="@style/SettingText"
        android:layout_below="@+id/tv_cancellation_policy"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/text_contact_us" />

    <TextView
        android:id="@+id/tv_about_us"
        style="@style/SettingText"
        android:layout_below="@+id/tv_contact_us"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/text_about_us" />

    <TextView
        android:id="@+id/tv_notification"
        style="@style/SettingText"
        android:layout_below="@+id/tv_about_us"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/menu_notification" />

    <TextView
        android:id="@+id/tv_logout"
        style="@style/SettingText"
        android:layout_below="@+id/tv_notification"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/text_logout" />

</RelativeLayout>