<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogLinearLayoutLudo"
    android:background="#F1e7ea">

    <TextView
        android:id="@+id/tv_dialog_name"
        style="@style/NewDialogHeadText"
        android:text="@string/text_game_credential" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_pubg_credential"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_9" />

        <TextView
            android:id="@+id/tv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:background="@color/color_yellow"
            android:gravity="center"
            android:padding="@dimen/padding_8"
            android:text="@string/help_pubg_show_image"
            android:textColor="@color/blue_dark"
            android:textSize="@dimen/text_9" />

        <EditText
            android:id="@+id/et_username"
            style="@style/CustomEditTextLudo"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_game_user_name"
            android:maxLength="25" />

        <EditText
            android:id="@+id/et_character"
            style="@style/CustomEditTextLudo"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_character_name"
            android:maxLength="25" />

        <EditText
            android:id="@+id/et_team_name"
            style="@style/CustomEditTextLudo"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_team_name_any"
            android:maxLength="25" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/margin_5"
            android:hint="@string/text_amount_rs"
            android:textColor="@color/color_green"
            android:textSize="@dimen/text_17"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/DialogButtonWeight"
                android:text="@string/text_cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                style="@style/DialogButtonWeight"
                android:layout_marginStart="@dimen/margin_5"
                android:text="@string/txt_pay" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_squad_payment"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_9" />
    </LinearLayout>
</LinearLayout>
