<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/margin_10"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_five_hundred"
        style="@style/ButtonBlueCoin"
        android:layout_marginEnd="@dimen/margin_2"
        android:layout_weight="1"
        android:text="@string/text_five_hundred" />
    <TextView
        android:id="@+id/tv_thousand"
        style="@style/ButtonBlueCoin"
        android:layout_marginEnd="@dimen/margin_2"
        android:layout_weight="1"
        android:text="@string/text_thousand" />
    <TextView
        android:id="@+id/tv_two_thousand"
        style="@style/ButtonBlueCoin"
        android:layout_marginEnd="@dimen/margin_2"
        android:layout_weight="1"
        android:text="@string/text_two_thousand" />
    <TextView
        android:id="@+id/tv_five_thousand"
        style="@style/ButtonBlueCoin"
        android:layout_weight="1"
        android:text="@string/text_five_thousand" />

</LinearLayout>