<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogLinearLayoutLeague"
    android:background="#F1e7ea">

    <TextView
        android:id="@+id/tv_dialog_name"
        style="@style/NewDialogHeadText"
        android:text="@string/text_game_credential" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="@string/help_pubg_credential"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_9" />

        <TextView
            android:id="@+id/tv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_3"
            android:background="@color/color_yellow"
            android:gravity="center"
            android:padding="@dimen/padding_8"
            android:text="@string/help_pubg_show_image"
            android:textColor="@color/blue_dark"
            android:textSize="@dimen/text_9" />

        <EditText
            android:id="@+id/et_username"
            style="@style/CustomEditTextLudo"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_pubg_user_name"
            android:maxLength="25" />

        <EditText
            android:id="@+id/et_character"
            style="@style/CustomEditTextLudo"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_pubg_character_name"
            android:maxLength="25" />

        <EditText
            android:id="@+id/et_team_id"
            style="@style/CustomEditTextLudo"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_team_id"
            android:maxLength="25"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_game_level"
            style="@style/CustomEditTextLudo"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_game_level"
            android:maxLength="25" />

        <LinearLayout
            android:id="@+id/ll_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/text_yes"
                    android:textColor="@color/light_black" />

                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_no"
                    android:textColor="@color/light_black" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/DialogButtonWeight"
                android:text="@string/text_cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                style="@style/DialogButtonWeight"
                android:layout_marginStart="@dimen/margin_5"
                android:text="@string/txt_submit" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:gravity="center"
            android:padding="@dimen/padding_2"
            android:text="@string/help_game_rules_join_team"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_9"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
