<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogLinearLayout">

    <TextView
        android:id="@+id/tv_heading"
        android:text="@string/text_payment_status"
        style="@style/DialogHeadText"/>

    <ImageView
        android:id="@+id/iv_payment"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/payment_success"
        android:contentDescription="@string/s3" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_5"
        android:padding="@dimen/padding_5"
        android:textColor="@color/light_gray"
        android:text="@string/text_payment_status_msg"
        android:textSize="@dimen/text_15"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        style="@style/DialogButton"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_5"
        android:text="@string/ok" />

</LinearLayout>
